# FMB-NCM

./: .env  .gitignore  LICENSE  README.md  dockercompose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  schemes.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  posts.py  private.py  users.py
backend/app/core/: config.py  db.py  security.py
frontend/: Dockerfile  next.config.ts  openapi.json  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/check-session/: route.ts
frontend/src/app/api/delete-session/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/hooks/: use-auth.ts
frontend/src/client/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/common/: animation-wrapper.tsx
frontend/src/components/items/: menu-item.tsx  menu-toggle.tsx
frontend/src/providers/: auth-provider.tsx  chakra.tsx
frontend/src/theme/: global-css.ts  index.ts  text-styles.ts
frontend/src/theme/recipes/: button.ts  checkmark.ts  input.ts  radiomark.ts
frontend/src/theme/semantic-tokens/: colors.ts
frontend/src/theme/slot-recipes/: accordion.ts  checkbox-card.ts  checkbox.ts  collapsible.ts  color-picker.ts  dialog.ts  drawer.ts  editable.ts  file-upload.ts  index.ts  menu.ts  native-select.ts  number-input.ts  pin-input.ts  progress-circle.ts  radio-card.ts  radio-group.ts  rating-group.ts  segment-group.ts  select.ts  slider.ts  steps.ts  switch.ts
scripts/: generate-client.sh
(+17 files in other folders)
