[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.12",
    "jwt>=1.3.1",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
